--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,9 +1,9 @@
   <body>
     <div id="page" class="clearfix">
 
-    <%= render partial: 'partials/header' %>
+    <%= render partial: 'partials/home/header' %>
 
-    <%= render partial: 'partials/header_sub_menu' %>
+    <%= render partial: 'partials/home/header_sub_menu' %>
 
       <section id="content-holder" class="clearfix">
         <main class="content">
@@ -31,7 +31,7 @@
         </main>
         <!-- EndContent-->
 
-      <%= render partial: 'partials/sidebar' %>
+      <%= render partial: 'partials/home/sidebar' %>
 
       </section>
       <!-- EndContentHolder-->
