--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,21 @@
   <body>
     <div id="page" class="clearfix">
 
-    <%= render partial: 'partials/header' %>
+    <%= render partial: 'partials/home/header' %>
 
-    <%= render partial: 'partials/header_sub_menu' %>
+    <%= render partial: 'partials/home/header_sub_menu' %>
 
       <section id="content-holder" class="clearfix">
         <main class="content">
 
-      <%= render partial: 'partials/post_content' %>
+      <%= render partial: 'partials/home/post_content' %>
 
-      <%= render partial: 'partials/pagination' %>
+      <%= render partial: 'partials/home/pagination' %>
 
         </main>
         <!-- EndContent-->
 
-      <%= render partial: 'partials/sidebar' %>
+      <%= render partial: 'partials/home/sidebar' %>
      
       </section>
       <!-- EndContentHolder-->
